TP3/style.css
body {
    overflow: hidden; /* Hide scrollbars */
}

/* CONSTANT */
:root {
    --obstacles-velocity: 5s;
    --bg-velocity: 5s;
}

.batman {
    width: 120px;
    height: 160px;
    margin: auto;
    position: absolute;
    background: url( img/character/run.png );
    bottom: 11%;
    top: 59%;
    left: 20%;
}

.inCity { 
    top: 78%;
}

/* ACTIONS */

.run {
    animation: run 1.3s steps(14) infinite;
}

.jump {
    animation: jump 1.2s linear 1;
    /* TODO("Change url image") */
    background: url( img/barrier/dolarJoker.png );
}

.dodge {
    width: 117px;
    height: 80px;
    top: 72%;
    background: url( img/character/dodge.png );
    animation: dodge .5s steps(4) infinite;
}

.dodgeInCity { 
    top: 92%;
}

@keyframes dodge {
    0% { background-position: 0;}
    0% { background-position: -468px;}
}

@keyframes jump {
    0% {transform: translateY(0px); }
    50% { transform: translateY(-400px); }
    100% { transform: translateY(0px); }
}

@keyframes run {
    0% { background-position: 0; }
    100% { background-position: -1754px; }
}

/* BACKGROUND */

.layer {
    min-height: 600px; 
    width: 100%;
    height: 100%;
    position: absolute;
    top: 0;
    left: 0;
    background-repeat: repeat-x;
    background-size: cover;
    z-index: -1;
}

.layer-0 {
    background: url(img/parallax/night/layer_1.png);
    animation: scroll var(--bg-velocity) infinite linear;
}

.layer-1 { 
    background: url( img/parallax/night/layer_3.png );
    animation: scroll var(--bg-velocity) infinite linear;
}

.layer-2 { 
    background: url( img/parallax/night/layer_2.png );
    animation: scroll var(--bg-velocity) infinite linear;
}

.layer-3 { 
    background: url( img/parallax/night/layer_4.png );
    animation: scroll var(--bg-velocity) infinite linear;
}

.layer-4 { 
    background: url( img/parallax/night/layer_5.png ) repeat-x;
}

.layer-5 { 
    background: url( img/parallax/night/layer_6.png ) repeat-x;
}

.layer-6 {
    background: url(img/parallax/city/layer_1.png);
    animation: scroll var(--bg-velocity) infinite linear;
}

.layer-7 {
    background: url( img/parallax/city/layer_2.png );
    animation: scroll var(--bg-velocity) infinite linear;
}

.layer-8 {
    background: url( img/parallax/city/layer_3.png );
    animation: scroll var(--bg-velocity) infinite linear;
}

.layer-9 {
    background: url( img/parallax/city/layer_4.png );
    animation: scroll var(--bg-velocity) infinite linear;
}

.layer-10 {
    background: url( img/parallax/city/layer_5.png ) repeat-x;
}

.layer-11 {
    background: url( img/parallax/city/layer_6.png ) repeat-x;
}

.layer-12 {
    background: url( img/parallax/city/layer_7.png ) repeat-x;
}

.layer-13 {
    background: url( img/parallax/city/layer_8.png ) repeat-x;
}

@keyframes scroll { 
    0% { background-position: 0px}
    100% { background-position: -1944px;}
}

/* OBSTACLES */

.joker{
    margin: auto;
    background: url( img/barrier/jokerAlto1.png );
    position: absolute;
}

.dolar {
    margin: auto;
    position: absolute;
}

.dollar360{ 
    animation: dolar 2s infinite;
}

.move { 
    animation: movement var(--obstacles-velocity) infinite linear;
}

@keyframes dolar {
    0% { transform:rotateY(0deg); }
    50% { transform:rotateY(180deg); }
    100% { transform:rotateY(360deg); }
}

@keyframes movement { 
    0% { transform:translateX(-80px) }
    100% { transform: translateX(-1920px); }
}

.my-btn {
    width: 71px !important;
    height: 40px;
}

.city {
    background-image: url( img/background/cityPNG.png);
}

.night {
    background-image: url( img/background/night.png);
}

.dontShow {
    display: none !important;
}

.font-winner { 
    font-family: 'Courier New','cursive' !important;
    font-style: italic !important;
    font-size: 400% !important;
}

.myModal { 
    cursor:  pointer !important;
    pointer-events:all !important; 
}

.chrometer { 
    width: 30% !important;
    max-width: 30% !important;
    padding-top: 1%;
    border: 1px solid white !important;
    margin-left: 10%;
    text-align: center;
    justify-content: center !important;
    align-content: center !important;
}

.dollars { 
    width: 25% !important;
    max-width: 25% !important;
    padding-top: 1%;
    margin-right: 10%;
    text-align: center;
    justify-content: center !important;
    align-content: center !important;
}

.advice {
    animation: color 4s infinite; 
}

.adviceInCity { 
    animation: colorInCity 4s infinite;
}

@keyframes color { 
   0% { color: white ; }
   50% { color: rgba(255, 0, 0, 0.837);}
   100% { color: white ; }
}

@keyframes colorInCity { 
    0% { color: white ; }
    50% { color: black; }
    100% { color: white ; }
 }

.scale {
    animation: zoom 4s infinite;
}

@keyframes zoom {
    0% {
        transform: scale(1,1);
    }
    50% {
        transform: scale(1.2,1.2);
    }
    100% {
        transform: scale(1,1);
    }
}

